plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.boot'
version = '0.0.1-SNAPSHOT'
description = 'final project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// Query DSL쓰기 위해 -> Q클래스 인식
def querydslDir = "$buildDir/generated/sources/annotationProcessor/java/main"
sourceSets {
    main { java { srcDirs += querydslDir } }
}

dependencies {

    // --- Spring Boot Starters ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1' /*에러 확인용*/
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.3.1'
    implementation 'org.apache.httpcomponents.core5:httpcore5-h2:5.3.1'

    // --- MyBatis ---
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'

    // --- QueryDSL ---
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // --- JWT (JSON Web Token) ---
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // --- oauth2 ---
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // --- mariadb ---
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    // --- Developer Tools ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // --- Test ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // 참고: 'spring-security-crypto'는 'spring-boot-starter-security'에 포함되어 있어 별도 추가가 필요 없습니다.

}

tasks.named('test') {
    useJUnitPlatform()
}